--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,27 @@
-<p>Footer</p>
+<footer class="footer">
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>Về chúng tôi</h3>
+        <p>Cửa hàng thời trang cao cấp dành cho giới trẻ</p>
+      </div>
+      <div class="footer-section">
+        <h3>Liên kết</h3>
+        <ul>
+          <li><a href="#">Cửa hàng</a></li>
+          <li><a href="#">Câu hỏi thường gặp</a></li>
+          <li><a href="#">Hướng dẫn thanh toán online</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Mạng xã hội</h3>
+        <div class="social-icons">
+          <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i>Facebook</a>
+          <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i>Instagram</a>
+          <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i>Twitter</a>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      &copy; 2024 HKH Apparel. All rights reserved.
+    </div>
+  </footer>
