--- a/src/app/features/shop/sidebar-shop/sidebar-shop.component.html
+++ b/src/app/features/shop/sidebar-shop/sidebar-shop.component.html
@@ -1,1 +1,61 @@
-<p>sidebar-shop works!</p>
+<div class="sidebar-shop">
+    <div class="danhmucsanpham-shop">
+        <h5>DANH MỤC SẢN PHẨM</h5>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="danhmucsanpham-item accordion-item">
+              <h2 class="danhmucsanpham-father accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  <a href="#">Light Stick</a>
+                  <p>(20)</p>
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="danhmucsanpham-childs accordion-body">
+                    <li>&nbsp;&nbsp;&nbsp;<a href="#">Light Stick Vip J97</a></li>
+                    <li>&nbsp;&nbsp;&nbsp;<a href="#">Light Stick J97 Version 1</a></li>
+                    <li>&nbsp;&nbsp;&nbsp;<a href="#">Light Stick J97 Version 2</a></li>
+                </div>
+              </div>
+            </div>
+            <div class="danhmucsanpham-item accordion-item">
+              <h2 class="danhmucsanpham-father accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    <a href="#">Áo J97</a>
+                    <p>(20)</p>
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="danhmucsanpham-childs accordion-body">
+                    <li>&nbsp;&nbsp;&nbsp;<a href="#">Áo thun J97</a></li>
+                </div>
+              </div>
+            </div>
+            <div class="danhmucsanpham-item accordion-item">
+              <h2 class="danhmucsanpham-father accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    <a href="#">Quần J97</a>
+                    <p>(97)</p>
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="danhmucsanpham-childs accordion-body">
+                    <li>&nbsp;&nbsp;&nbsp;<a href="#">Quần kỷ niệm J97</a></li>
+                </div>
+              </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="danhmucsanpham-shop">
+        <h5 style="margin: 1rem 0;">LỌC THEO GIÁ</h5>
+        <p>Từ 997.000 đ -  Đến 5.000.000 đ</p>
+        <div>
+            <input id="loctheogia" class="slider-loctheogia" type="range" [(ngModel)]="giaTri" min="997000" max="5000000">
+            <div style="display: flex;justify-content: space-between;align-items: center;">
+                <p style="margin: 0;">Giá cần lọc:</p>
+                <input type="text" style="width: 50%;" [(ngModel)]="giaTri">
+                <button>Lọc</button>
+            </div>
+        </div>
+    </div>
+</div>
