--- a/src/app/features/admin/dashboard/dashboard.component.html
+++ b/src/app/features/admin/dashboard/dashboard.component.html
@@ -1,9 +1,1 @@
-
-<div class="sb-nav-fixed">
-    <app-admin-header></app-admin-header>
-    <div id="layoutSidenav">
-        <app-sidebar></app-sidebar>
-        <router-outlet></router-outlet>
-    </div>
-</div>
-
+<p>admin works!</p>
