--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -1,1 +1,15 @@
-<p>item-shop works!</p>
+<div class="shop-item">
+    <div style="display: flex;align-items: center;justify-content: center;">
+        <img src="https://res.cloudinary.com/dt46dvdeu/image/upload/v1702747356/albums/vux.thuy.trangg/h65cfqysy0ollzbzkwnk.jpg" alt="">
+    </div>
+    <p>Light Stick J97 Version 3</p>
+    <div class="price-shop-item">
+        <p>997.000 đ</p>
+        <p>997.000 đ</p>
+        <p>(-10%)</p>
+    </div>
+    <div class="btn-shop-item">
+        <button>Thêm vào giỏ hàng</button>
+        <button>Mua ngay</button>
+    </div>
+</div>
