--- a/src/app/features/shop/special-item-shop/special-item-shop.component.html
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.html
@@ -1,1 +1,19 @@
-<p>special-item-shop works!</p>
+<div class="specialitem-shop">
+    <div class="img-specialitem">
+        <img src="https://res.cloudinary.com/dt46dvdeu/image/upload/v1702747356/albums/vux.thuy.trangg/h65cfqysy0ollzbzkwnk.jpg" alt="">
+    </div>
+    <div class="info-specialitem">
+        <p class="title-info-specialitem">Light Stick J97 Version 3</p>
+        <p class="mota-info-specialitem">Mô tả: "Fireflies Light" là điều mong chờ của cộng đồng Đom Đóm trong năm 2024. Những người hâm mộ bấy lâu nay của Jack - J97 luôn trông chờ được sở hữu chiếc Light Stick chính thức - vật phẩm cổ động đặc trưng của mỗi một fandom.</p>
+        <div class="color-info-specialitem">
+            <p>Màu sắc: </p>
+            <div style="display: block; width: 20px; height: 20px; border-radius: 8px;background-color: blue;"></div>
+            <div style="display: block; width: 20px;height: 20px;border-radius: 8px;background-color: red;"></div>
+            <div style="display: block; width: 20px;height: 20px;border-radius: 8px;background-color: yellow;"></div>
+        </div>
+        <div>
+            <button>Thêm vào giỏ hàng</button>
+            <button>Mua ngay</button>
+        </div>
+    </div>
+</div>
