--- a/src/app/features/shop/sidebar-shop/sidebar-shop.component.css
+++ b/src/app/features/shop/sidebar-shop/sidebar-shop.component.css
@@ -1,4 +1,5 @@
-.danhmucsanpham-shop{
+.danhmucsanpham-shop,
+.loctheogia-shop{
     max-width: 300px;
 }
 .danhmucsanpham-father button a{
@@ -28,11 +29,10 @@
     width: 100%;
     height: 10px;
     border-radius: 5px;
-    border: 1px solid #000; /* Viền đen */
-    background-color: #ffffff; /* Màu trắng */
+    border: 1px solid #000; /* Black border */
+    background-color: #ffffff; /* White background */
     outline: none;
     opacity: 0.7;
-    -webkit-transition: .2s;
     transition: opacity .2s;
 }
 
@@ -42,7 +42,7 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #000000; /* Nút kéo màu đen */
+    background-color: #000000; /* Black thumb */
     cursor: pointer;
 }
 
@@ -50,8 +50,9 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: #000000; /* Nút kéo màu đen */
+    background-color: #000000; /* Black thumb */
     cursor: pointer;
 }
+
 
   
