--- a/src/app/features/shop/special-item-shop/special-item-shop.component.html
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.html
@@ -1,4 +1,4 @@
-<div class="specialitem-shop">
+<!-- <div class="specialitem-shop">
     <div class="img-specialitem">
         <img src="https://res.cloudinary.com/dt46dvdeu/image/upload/v1702747356/albums/vux.thuy.trangg/h65cfqysy0ollzbzkwnk.jpg" alt="">
     </div>
@@ -16,4 +16,13 @@
             <button>Mua ngay</button>
         </div>
     </div>
-</div>
+</div> -->
+
+<div class="card w-100 mb-3">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary me-3 mt-1 mb-1">Thêm vào giỏ hàng</a>
+      <a href="#" class="btn btn-primary">Mua ngay</a>
+    </div>
+  </div>
