--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -20,7 +20,7 @@
             <img class="card-img rounded-0 img-fluid" src="https://res.cloudinary.com/dt46dvdeu/image/upload/v1702747356/albums/vux.thuy.trangg/h65cfqysy0ollzbzkwnk.jpg">
         </div>
         <div class="card-body">
-            <a href="shop-single.html" class="h3 text-decoration-none">Oupidatat non</a>
+            <a href="shop/details" class="h3 text-decoration-none">Oupidatat non</a>
             <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
                 <li>M/L/X/XL</li>
                 <li class="pt-2">
