--- a/src/app/features/shop/product-details/product-details.component.html
+++ b/src/app/features/shop/product-details/product-details.component.html
@@ -29,7 +29,7 @@
                                     </div>
                                     <div class="col-4">
                                         <a href="#">
-                                            <img class="card-img img-fluid" src="https://res.cloudinary.com/dt46dvdeu/image/upload/v1702747356/albums/vux.thuy.trangg/h65cfqysy0ollzbzkwnk.jpg" alt="Product Image 2">
+                                            <img class="card-img img-fluid" src="https://locobee.com/mag/wp-content/uploads/2018/06/Locobee_Naruto_1-1024x750.jpg" alt="Product Image 2">
                                         </a>
                                     </div>
                                     <div class="col-4">
