--- a/src/app/features/shop/special-item-shop/special-item-shop.component.html
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.html
@@ -20,9 +20,8 @@
 
 <div class="card w-100 mb-3">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary me-3 mt-1 mb-1">Thêm vào giỏ hàng</a>
-      <a href="#" class="btn btn-primary">Mua ngay</a>
+        <img src="../../../../assets/images/j97.jpg" alt="" width="200" height="200">
+        <p>Light Stick J97 Version 3</p>
+        <p>Mô tả: "Fireflies Light" là điều mong chờ của cộng đồng Đom Đóm trong năm 2024. Những người hâm mộ bấy lâu nay của Jack - J97 luôn trông chờ được sở hữu chiếc Light Stick chính thức - vật phẩm cổ động đặc trưng của mỗi một fandom.</p>
     </div>
   </div>
