--- a/src/app/features/shop/item-shop/item-shop.component.html
+++ b/src/app/features/shop/item-shop/item-shop.component.html
@@ -15,22 +15,23 @@
 </div> -->
 
 
-    <div class="card mb-4 product-wap rounded-0">
-        <div class="card rounded-0">
-            <img class="card-img rounded-0 img-fluid" src="https://res.cloudinary.com/dt46dvdeu/image/upload/v1702747356/albums/vux.thuy.trangg/h65cfqysy0ollzbzkwnk.jpg">
-        </div>
-        <div class="card-body">
-            <a href="shop/details" class="h3 text-decoration-none">Oupidatat non</a>
-            <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
-                <li>M/L/X/XL</li>
-                <li class="pt-2">
-                    <span class="product-color-dot color-dot-red float-left rounded-circle ml-1"></span>
-                    <span class="product-color-dot color-dot-blue float-left rounded-circle ml-1"></span>
-                    <span class="product-color-dot color-dot-black float-left rounded-circle ml-1"></span>
-                    <span class="product-color-dot color-dot-light float-left rounded-circle ml-1"></span>
-                    <span class="product-color-dot color-dot-green float-left rounded-circle ml-1"></span>
-                </li>
-            </ul>
-            <p class="text-center mb-0">$250.00</p>
-        </div>
+<div class="card mb-4 product-wap rounded-0">
+    <div class="card rounded-0">
+        <img class="card-img rounded-0 img-fluid square-img" src="../../../../assets/images/j97.jpg">
     </div>
+    <div class="card-body">
+        <a href="shop/details" class="h3 text-decoration-none">Oupidatat non</a>
+        <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
+            <li>M/L/X/XL</li>
+            <li class="pt-2">
+                <span class="product-color-dot color-dot-red float-left rounded-circle ml-1"></span>
+                <span class="product-color-dot color-dot-blue float-left rounded-circle ml-1"></span>
+                <span class="product-color-dot color-dot-black float-left rounded-circle ml-1"></span>
+                <span class="product-color-dot color-dot-light float-left rounded-circle ml-1"></span>
+                <span class="product-color-dot color-dot-green float-left rounded-circle ml-1"></span>
+            </li>
+        </ul>
+        <p class="text-center mb-0">$250.00</p>
+    </div>
+</div>
+
