--- a/src/app/features/shop/special-item-shop/special-item-shop.component.html
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.html
@@ -18,10 +18,28 @@
     </div>
 </div> -->
 
-<div class="card w-100 mb-3">
-    <div class="card-body">
-        <img src="../../../../assets/images/j97.jpg" alt="" width="200" height="200">
-        <p>Light Stick J97 Version 3</p>
-        <p>Mô tả: "Fireflies Light" là điều mong chờ của cộng đồng Đom Đóm trong năm 2024. Những người hâm mộ bấy lâu nay của Jack - J97 luôn trông chờ được sở hữu chiếc Light Stick chính thức - vật phẩm cổ động đặc trưng của mỗi một fandom.</p>
+<!-- <div class="card w-100 mb-3">
+    <div class="card-body row">
+        <div class="col-4 square-div">
+            <img src="../../../../assets/images/j97.jpg" alt="" class="img-fluid">
+        </div>
+        <div class="col-8 other-div ">
+            <p>Light Stick J97 Version 3</p>
+            <p>Mô tả: "Fireflies Light" là điều mong chờ của cộng đồng Đom Đóm trong năm 2024. Những người hâm mộ bấy lâu nay của Jack - J97 luôn trông chờ được sở hữu chiếc Light Stick chính thức - vật phẩm cổ động đặc trưng của mỗi một fandom.</p>
+        </div>
     </div>
-  </div>
+  </div> -->
+
+    <div class="card card-custom">
+        <div class="row no-gutters">
+            <div class="col-md-4 img-container">
+                <img src="../../../../assets/images/j97.jpg" alt="Placeholder Image">
+            </div>
+            <div class="col-md-8 d-flex align-items-center mt-3">
+                <div>
+                    <p>Light Stick J97 Version 3</p>
+                    <p>Mô tả: "Fireflies Light" là điều mong chờ của cộng đồng Đom Đóm trong năm 2024. Những người hâm mộ bấy lâu nay của Jack - J97 luôn trông chờ được sở hữu chiếc Light Stick chính thức - vật phẩm cổ động đặc trưng của mỗi một fandom.</p>
+                </div>
+            </div>
+        </div>
+    </div>
