--- a/src/app/features/shop/special-item-shop/special-item-shop.component.css
+++ b/src/app/features/shop/special-item-shop/special-item-shop.component.css
@@ -1,31 +1,15 @@
-.specialitem-shop{
+.card-custom {
     width: 100%;
-    height: fit-content;
-    padding: 1rem 1.5rem;
-    display: flex;
-    background-color: #ccc;
-    align-items: center;
+    margin: 10px 0;
+    padding: 1rem;
 }
-.img-specialitem{
-    width: 200px;
-    margin-right: 1.5rem;
+.img-container {
+    max-width: 200px;
+    max-height: 200px;
+    overflow: hidden;
+    margin: auto;
 }
-.img-specialitem img{
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 12px;
-}
-.info-specialitem{
-
-}
-.info-specialitem .title-info-specialitem{
-    font-size: 24px;
-    font-weight: 700;
-}
-.info-specialitem .mota-info-specialitem{
-
-}
-.color-info-specialitem{
-    display: flex;
+.img-container img {
+    width: 100%;
+    height: auto;
 }
